--- a/src/Presentation.Web/Presentation.Web/Components/Pages/Releves/Index.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Pages/Releves/Index.razor
@@ -17,7 +17,7 @@
                 <span class="oi oi-graph" aria-hidden="true"></span> Par Sonde
             </button>
             <button class="btn btn-primary" @onclick="NavigateToCreate">
-                <span class="oi oi-plus" aria-hidden="true"></span> Nouvelle localisation
+                <span class="oi oi-plus" aria-hidden="true"></span> Nouveau relevé
             </button>
         </div>
     </div>
