--- a/src/Presentation.Web/Presentation.Web/Components/Pages/SystemePartenaires/Index.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Pages/SystemePartenaires/Index.razor
@@ -75,6 +75,9 @@ else
                         <a href="/systeme-partenaires/edit/@id" class="btn btn-sm btn-warning">
                             <span class="oi oi-pencil" aria-hidden="true"></span> Modifier
                         </a>
+                        <a href="/systeme-partenaires/@id/import-sondes" class="btn btn-sm btn-info ms-2">
+                            <span class="oi oi-cloud-download" aria-hidden="true"></span> Importer des sondes
+                        </a>
                         <a href="/systeme-partenaires/delete/@id" class="btn btn-sm btn-danger ms-2">
                             <span class="oi oi-trash" aria-hidden="true"></span> Supprimer
                         </a>
